--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   "dependencies": {
     "commander": "^5.0.0",
     "debug": "^4.1.1",
-    "rclnodejs": "^0.x.1",
+    "rclnodejs": "^0.11.1",
     "uuid": "^7.0.2",
     "ws": "^7.1.1"
   }
